# chen-2011-spherical-flames-gaia

./: .gitignore  ANALYSIS.md  README.md  pyproject.toml  references.json
.gaia/: compile_metadata.json  ir.json  ir_hash
.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
artifacts/: trace-raw.json  trace.md
docs/: detailed-reasoning.md
src/chen_2011_spherical_flames/: __init__.py  motivation.py  priors.py  s1_extraction_models.py  s2_nq_window.py  s3_cantera_validation.py  s4_asurf_reproduction.py  s5_taylor_reanalysis.py  s6_qg_audit.py
