[project]
name = "chen-2011-spherical-flames-gaia"
version = "0.1.0"
description = "Gaia knowledge package formalizing Chen (2011) 'Extraction of laminar flame speed and Markstein length from outwardly propagating spherical flames' (Combust. Flame 158, 291–300) together with the 2026-04-09 Bohrium reproduction trace (chen-2011-cnf-158)."
readme = "README.md"
authors = [
    { name = "kunchen", email = "chenkun0228@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gaia-lang>=0.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chen_2011_spherical_flames"]

[tool.gaia]
type = "knowledge-package"
uuid = "855736ab-447f-47a4-8abf-6db8f14a7cb4"
